<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_synonym_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/synonym"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tv_synonym_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/not_known"
        app:layout_constraintBottom_toTopOf="@+id/tv_usage_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_synonym_title" />

    <TextView
        android:id="@+id/tv_usage_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usage"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_synonym_desc"
        />

    <TextView
        android:id="@+id/tv_usage_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/not_known"
        app:layout_constraintTop_toBottomOf="@+id/tv_usage_title"
        />

    <TextView
        android:id="@+id/tv_deficiency_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deficiency"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_usage_desc"
        />

    <TextView
        android:id="@+id/tv_deficiency_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/not_known"
        app:layout_constraintTop_toBottomOf="@+id/tv_deficiency_title"
        />

    <TextView
        android:id="@+id/tv_food_source_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/food_source"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tv_deficiency_desc"
        />

    <TextView
        android:id="@+id/tv_food_source_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/not_known"
        app:layout_constraintTop_toBottomOf="@+id/tv_food_source_title"
        />

</androidx.constraintlayout.widget.ConstraintLayout>